Listening on all interfaces instead of just localhost

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,8 +2,12 @@ name: release
 
 on:
   push:
-    tags:
-      - "v*"
+    branches: [master]
+#on:
+#  push:
+#    tags:
+#      - "v*"
+
 jobs:
   goreleaser:
     runs-on: ubuntu-latest
