--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,7 +2,10 @@ name: release
 
 on:
   push:
-    branches: [master]
+    branches:
+      - master
+    tags:
+      - "v*"
 #on:
 #  push:
 #    tags:
