Updated Makefile to use goreleaser Fixed issue in .goreleaser.yml

--- a/.github/workflows/ci-testing.yml
+++ b/.github/workflows/ci-testing.yml
@@ -13,8 +13,8 @@ jobs:
       - name: test
         run: make test
       - name: Upload Coverage report to CodeCov
-        uses: codecov/codecov-action@v1.3.1
+        uses: codecov/codecov-action@v1.3.2
         with:
           token: ${{secrets.CODECOV_TOKEN}}
-          file: ./build/cover.out
+          file: ./dist/cover.out
 
