--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -66,7 +66,7 @@ dockers:
       - --label=org.opencontainers.image.created={{ .Date }}
       - --label=org.opencontainers.image.revision={{ .FullCommit }}
     extra_files:
-      - glob: static/**
+      - ./static/auth/login/index.html
   - image_templates:
       - "ghcr.io/habakke/{{ .ProjectName }}:{{ .Version }}-386"
       - "ghcr.io/habakke/{{ .ProjectName }}:{{ .Env.GITHUB_SHA }}-386"
@@ -86,7 +86,7 @@ dockers:
       - --label=org.opencontainers.image.created={{ .Date }}
       - --label=org.opencontainers.image.revision={{ .FullCommit }}
     extra_files:
-      - glob: static/**
+      - ./static/auth/login/index.html
   - image_templates:
       - "ghcr.io/habakke/{{ .ProjectName }}:{{ .Version }}-arm64"
       - "ghcr.io/habakke/{{ .ProjectName }}:{{ .Env.GITHUB_SHA }}-arm64"
@@ -106,7 +106,7 @@ dockers:
       - --label=org.opencontainers.image.created={{ .Date }}
       - --label=org.opencontainers.image.revision={{ .FullCommit }}
     extra_files:
-      - glob: static/**
+      - ./static/auth/login/index.html
   - image_templates:
       - "ghcr.io/habakke/{{ .ProjectName }}:{{ .Version }}-arm64v8"
       - "ghcr.io/habakke/{{ .ProjectName }}:{{ .Env.GITHUB_SHA }}-arm64v8"
@@ -126,7 +126,7 @@ dockers:
       - --label=org.opencontainers.image.created={{ .Date }}
       - --label=org.opencontainers.image.revision={{ .FullCommit }}
     extra_files:
-      - glob: static/**
+      - ./static/auth/login/index.html
   - image_templates:
       - "ghcr.io/habakke/{{ .ProjectName }}:{{ .Version }}-armv6"
       - "ghcr.io/habakke/{{ .ProjectName }}:{{ .Env.GITHUB_SHA }}-armv6"
@@ -147,7 +147,7 @@ dockers:
       - --label=org.opencontainers.image.created={{ .Date }}
       - --label=org.opencontainers.image.revision={{ .FullCommit }}
     extra_files:
-      - glob: static/**
+      - ./static/auth/login/index.html
   - image_templates:
       - "ghcr.io/habakke/{{ .ProjectName }}:{{ .Version }}-armv7"
       - "ghcr.io/habakke/{{ .ProjectName }}:{{ .Env.GITHUB_SHA }}-armv7"
@@ -168,7 +168,7 @@ dockers:
       - --label=org.opencontainers.image.created={{ .Date }}
       - --label=org.opencontainers.image.revision={{ .FullCommit }}
     extra_files:
-      - glob: static/**
+      - ./static/auth/login/index.html
 release:
   disable: true
 changelog:
