--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -27,21 +27,18 @@ docker_manifests:
     image_templates:
       - "ghcr.io/habakke/{{ .ProjectName }}:{{ .Version }}-amd64"
       - "ghcr.io/habakke/{{ .ProjectName }}:{{ .Version }}-armv7"
-      - "ghcr.io/habakke/{{ .ProjectName }}:{{ .Version }}-arm64"
       - "ghcr.io/habakke/{{ .ProjectName }}:{{ .Version }}-arm64v8"
       - "ghcr.io/habakke/{{ .ProjectName }}:{{ .Version }}-386"
   - name_template: "ghcr.io/habakke/{{ .ProjectName }}:{{ .Env.GITHUB_SHA }}"
     image_templates:
       - "ghcr.io/habakke/{{ .ProjectName }}:{{ .Env.GITHUB_SHA }}-amd64"
       - "ghcr.io/habakke/{{ .ProjectName }}:{{ .Env.GITHUB_SHA }}-armv7"
-      - "ghcr.io/habakke/{{ .ProjectName }}:{{ .Env.GITHUB_SHA }}-arm64"
       - "ghcr.io/habakke/{{ .ProjectName }}:{{ .Env.GITHUB_SHA }}-arm64v8"
       - "ghcr.io/habakke/{{ .ProjectName }}:{{ .Env.GITHUB_SHA }}-386"
   - name_template: "ghcr.io/habakke/{{ .ProjectName }}:latest"
     image_templates:
       - "ghcr.io/habakke/{{ .ProjectName }}:latest-amd64"
       - "ghcr.io/habakke/{{ .ProjectName }}:latest-armv7"
-      - "ghcr.io/habakke/{{ .ProjectName }}:latest-arm64"
       - "ghcr.io/habakke/{{ .ProjectName }}:latest-arm64v8"
       - "ghcr.io/habakke/{{ .ProjectName }}:latest-386"
 dockers:
@@ -86,32 +83,13 @@ dockers:
     extra_files:
       - ./static/auth/login/index.html
   - image_templates:
-      - "ghcr.io/habakke/{{ .ProjectName }}:{{ .Version }}-arm64"
-      - "ghcr.io/habakke/{{ .ProjectName }}:{{ .Env.GITHUB_SHA }}-arm64"
-      - "ghcr.io/habakke/{{ .ProjectName }}:latest-arm64"
-    ids: [auth-proxy]
-    goos: linux
-    goarch: arm64
-    use_buildx: true
-    dockerfile: Dockerfile
-    build_flag_templates:
-      - --pull
-      - --platform=linux/arm64
-      - --label=org.opencontainers.image.title={{ .ProjectName }}
-      - --label=org.opencontainers.image.description=Authentication proxy
-      - --label=org.opencontainers.image.source=https://github.com/habakke/{{ .ProjectName }}
-      - --label=org.opencontainers.image.version={{ .Version }}
-      - --label=org.opencontainers.image.created={{ .Date }}
-      - --label=org.opencontainers.image.revision={{ .FullCommit }}
-    extra_files:
-      - ./static/auth/login/index.html
-  - image_templates:
       - "ghcr.io/habakke/{{ .ProjectName }}:{{ .Version }}-arm64v8"
       - "ghcr.io/habakke/{{ .ProjectName }}:{{ .Env.GITHUB_SHA }}-arm64v8"
       - "ghcr.io/habakke/{{ .ProjectName }}:latest-arm64v8"
     ids: [auth-proxy]
     goos: linux
     goarch: arm64
+    goarm: 8
     use_buildx: true
     dockerfile: Dockerfile
     build_flag_templates:
