--- a/.github/workflows/ci-testing.yml
+++ b/.github/workflows/ci-testing.yml
@@ -10,6 +10,15 @@ jobs:
         uses: actions/setup-go@v2
         with:
           go-version: 1.16
+      - name: Cache Go modules
+        uses: actions/cache@preview
+        with:
+          path: ~/go/pkg/mod
+          key: ${{ runner.os }}-build-${{ hashFiles('**/go.sum') }}
+          restore-keys: |
+            ${{ runner.OS }}-build-${{ env.cache-name }}-
+            ${{ runner.OS }}-build-
+            ${{ runner.OS }}-
       - name: test
         run: make test
       - name: Upload Coverage report to CodeCov
@@ -17,4 +26,3 @@ jobs:
         with:
           token: ${{secrets.CODECOV_TOKEN}}
           file: ./dist/cover.out
-
