--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -59,7 +59,20 @@ dockers:
       - --label=org.opencontainers.image.created={{ .Date }}
       - --label=org.opencontainers.image.revision={{ .FullCommit }}
     extra_files:
-      - ./static/auth/login/index.html
+      - ./static/ninja-portrait.svg
+      - ./static/Inter-SemiBold.woff2
+      - ./static/Inter-Regular.woff2
+      - ./static/Inter-Medium.woff2
+      - ./static/Inter-Bold.woff2
+      - ./static/favicon.png
+      - ./static/fa-solid-900.woff2
+      - ./static/fa-regular-400.woff2
+      - ./static/application.css
+      - ./static/apple-touch-icon.png
+      - ./templates/login.tpl
+      - ./templates/error.tpl
+      - ./templates/reset.tpl
+      - ./templates/signup.tpl
   - image_templates:
       - "ghcr.io/habakke/{{ .ProjectName }}:{{ .Version }}-386"
       - "ghcr.io/habakke/{{ .ProjectName }}:{{ .Env.GITHUB_SHA }}-386"
@@ -79,7 +92,20 @@ dockers:
       - --label=org.opencontainers.image.created={{ .Date }}
       - --label=org.opencontainers.image.revision={{ .FullCommit }}
     extra_files:
-      - ./static/auth/login/index.html
+      - ./static/ninja-portrait.svg
+      - ./static/Inter-SemiBold.woff2
+      - ./static/Inter-Regular.woff2
+      - ./static/Inter-Medium.woff2
+      - ./static/Inter-Bold.woff2
+      - ./static/favicon.png
+      - ./static/fa-solid-900.woff2
+      - ./static/fa-regular-400.woff2
+      - ./static/application.css
+      - ./static/apple-touch-icon.png
+      - ./templates/login.tpl
+      - ./templates/error.tpl
+      - ./templates/reset.tpl
+      - ./templates/signup.tpl
   - image_templates:
       - "ghcr.io/habakke/{{ .ProjectName }}:{{ .Version }}-arm64v8"
       - "ghcr.io/habakke/{{ .ProjectName }}:{{ .Env.GITHUB_SHA }}-arm64v8"
@@ -99,7 +125,20 @@ dockers:
       - --label=org.opencontainers.image.created={{ .Date }}
       - --label=org.opencontainers.image.revision={{ .FullCommit }}
     extra_files:
-      - ./static/auth/login/index.html
+      - ./static/ninja-portrait.svg
+      - ./static/Inter-SemiBold.woff2
+      - ./static/Inter-Regular.woff2
+      - ./static/Inter-Medium.woff2
+      - ./static/Inter-Bold.woff2
+      - ./static/favicon.png
+      - ./static/fa-solid-900.woff2
+      - ./static/fa-regular-400.woff2
+      - ./static/application.css
+      - ./static/apple-touch-icon.png
+      - ./templates/login.tpl
+      - ./templates/error.tpl
+      - ./templates/reset.tpl
+      - ./templates/signup.tpl
   - image_templates:
       - "ghcr.io/habakke/{{ .ProjectName }}:{{ .Version }}-armv7"
       - "ghcr.io/habakke/{{ .ProjectName }}:{{ .Env.GITHUB_SHA }}-armv7"
@@ -120,7 +159,20 @@ dockers:
       - --label=org.opencontainers.image.created={{ .Date }}
       - --label=org.opencontainers.image.revision={{ .FullCommit }}
     extra_files:
-      - ./static/auth/login/index.html
+      - ./static/ninja-portrait.svg
+      - ./static/Inter-SemiBold.woff2
+      - ./static/Inter-Regular.woff2
+      - ./static/Inter-Medium.woff2
+      - ./static/Inter-Bold.woff2
+      - ./static/favicon.png
+      - ./static/fa-solid-900.woff2
+      - ./static/fa-regular-400.woff2
+      - ./static/application.css
+      - ./static/apple-touch-icon.png
+      - ./templates/login.tpl
+      - ./templates/error.tpl
+      - ./templates/reset.tpl
+      - ./templates/signup.tpl
 release:
   disable: true
 changelog:
