--- a/.github/workflows/security-scan.yml
+++ b/.github/workflows/security-scan.yml
@@ -3,7 +3,7 @@ name: "Security Scan"
 # Run workflow each time code is pushed to your repository and on a schedule.
 # The scheduled workflow runs every at 00:00 on Sunday UTC time.
 on:
-  push:
+  pull_request:
   schedule:
     - cron: '0 0 * * 0'
 
@@ -14,7 +14,7 @@ jobs:
       GO111MODULE: on
     steps:
       - name: Checkout Source
-        uses: actions/checkout@v2
+        uses: actions/checkout@v2.3.4
       - name: Run Gosec Security Scanner
         uses: securego/gosec@master
         with:
