Refactored the code Modified tests to do full e2e Added more tests Removed staticchecker and golint for golangci-lint

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -176,4 +176,11 @@ dockers:
 release:
   disable: true
 changelog:
-  skip: true
+  sort: asc
+  filters:
+    exclude:
+      - '^docs:'
+      - '^test:'
+      - 'README'
+      - Merge pull request
+      - Merge branch
