--- a/.github/workflows/ci-testing.yml
+++ b/.github/workflows/ci-testing.yml
@@ -1,7 +1,9 @@
-name: ci-testing
-on: [push, pull_request]
-jobs:
+name: "Unit Tests"
+on:
+  push:
+  pull_request:
 
+jobs:
   test:
     runs-on: ubuntu-latest
     steps:
