--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - master
+      - main
     tags:
       - "v*"
 
@@ -16,9 +17,9 @@ jobs:
       - name: Unshallow
         run: git fetch --prune --unshallow --recurse-submodules
       - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
+        uses: docker/setup-qemu-action@v2
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+        uses: docker/setup-buildx-action@v2
       - name: Set up Go
         uses: actions/setup-go@v3
         with:
@@ -30,18 +31,19 @@ jobs:
           GPG_PRIVATE_KEY: ${{ secrets.GPG_PRIVATE_KEY }}
           PASSPHRASE: ${{ secrets.PASSPHRASE }}
       - name: Login to GitHub Container Registry
-        uses: docker/login-action@v1
+        uses: docker/login-action@v2
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: Run GoReleaser
-        uses: goreleaser/goreleaser-action@v2
+        uses: goreleaser/goreleaser-action@v3
 #        if: startsWith(github.ref, 'refs/tags/')
         with:
           version: latest
           args: release --rm-dist
         env:
+          USER: "CI"
           GPG_FINGERPRINT: ${{ steps.import_gpg.outputs.fingerprint }}
           DOCKER_CLI_EXPERIMENTAL: enabled
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
