Updated ENV var to from local to "local"

--- a/deploy/deployment.yaml
+++ b/deploy/deployment.yaml
@@ -30,7 +30,7 @@ spec:
             - name: LOGLEVEL
               value: "debug"
             - name: ENV
-              value: local
+              value: "local"
             - name: TARGET
               value: "http://<service>.<namespace>.svc.cluster.local"
             - name: TOKEN
