--- a/deploy/deployment.yaml
+++ b/deploy/deployment.yaml
@@ -59,10 +59,7 @@ spec:
                   name: auth-proxy
                   key: google-oauth-client-secret
             - name: GOOGLE_OAUTH_CALLBACK_URL
-              valueFrom:
-                secretKeyRef:
-                  name: auth-proxy
-                  key: google-oauth-callback-url
+              value: "https://<example.com>/auth/google/callback"
           livenessProbe:
             initialDelaySeconds: 10
             timeoutSeconds: 30
