--- a/deploy/deployment.yaml
+++ b/deploy/deployment.yaml
@@ -66,7 +66,7 @@ spec:
             httpGet:
               scheme: "HTTP"
               path: "/healthz"
-              port : 80
+              port : $(PORT)
           resources:
             limits:
               cpu: 0.5
