--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -1,4 +1,5 @@
 name: Development pipeline
+run-name: Deploy by @${{ github.actor }}
 on:
   pull_request:
     branches:
@@ -6,19 +7,8 @@ on:
   workflow_dispatch:
 
 jobs:
-  debug:
-    runs-on: ubuntu-latest
-    environment: development
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      - name: Debug
-        shell: bash
-        run: |
-          echo PULL_REQUEST_HEAD_SHA=${{ github.event.pull_request.head.sha }}
-          echo GITHUB_SHA=${{ github.sha }}
-
   docker-build:
+    name: Build Docker image
     runs-on: ubuntu-latest
     environment: development
     permissions:
@@ -36,7 +26,8 @@ jobs:
           dockerfile: ./Dockerfile
           github_token: ${{ secrets.GITHUB_TOKEN }}
 
-  terraform-deploy:
+  terraform-deploy-development:
+    name: Deploy / Development
     needs: docker-build
     runs-on: ubuntu-latest
     environment: development
@@ -51,10 +42,46 @@ jobs:
         run: |
           echo "TF_VAR_project_id=${{ vars.DEPLOY_PROJECT_ID }}" >> $GITHUB_ENV
           echo "TF_VAR_environment=development" >> $GITHUB_ENV
-          echo "TF_VAR_container=${{ vars.DOCKER_REPO }}/${{ vars.DOCKER_IMAGE }}:${{ github.sha }}" >> $GITHUB_ENV
+          echo "TF_VAR_container=${{ needs.docker-build.outputs.tags }}" >> $GITHUB_ENV
       - uses: habakke/github-actions/.github/actions/terraform-deploy-gcp@master
         with:
           directory: ./deploy/development
+          service_account_key: ${{ vars.DEPLOY_SERVICE_ACCOUNT_KEY }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          deploy_on_pull: true
+
+  review-development:
+    name: Review / Development
+    needs: docker-build
+    runs-on: ubuntu-latest
+    environment: development
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+  terraform-deploy-production:
+    name: Deploy / Production
+    needs:
+      - docker-build
+      - terraform-deploy-development
+      - review-development
+    runs-on: ubuntu-latest
+    environment: production
+    permissions:
+      contents: read
+      id-token: write
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Set Terraform variables
+        shell: bash
+        run: |
+          echo "TF_VAR_project_id=${{ vars.DEPLOY_PROJECT_ID }}" >> $GITHUB_ENV
+          echo "TF_VAR_environment=production" >> $GITHUB_ENV
+          echo "TF_VAR_container=${{ needs.docker-build.outputs.tags }}" >> $GITHUB_ENV
+      - uses: habakke/github-actions/.github/actions/terraform-deploy-gcp@master
+        with:
+          directory: ./deploy/production
           service_account_key: ${{ vars.DEPLOY_SERVICE_ACCOUNT_KEY }}
           github_token: ${{ secrets.GITHUB_TOKEN }}
           deploy_on_pull: true
