--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -1,4 +1,5 @@
 name: Production pipeline
+run-name: Deploy to 'production' environment by @${{ github.actor }}
 on:
   push:
     branches:
@@ -7,7 +8,26 @@ on:
   workflow_dispatch:
 
 jobs:
+  docker-build:
+    runs-on: ubuntu-latest
+    environment: production
+    permissions:
+      contents: read
+      id-token: write
+      packages: write
+    outputs:
+      tags: ${{ env.DOCKER_METADATA_OUTPUT_TAGS }}
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - uses: habakke/github-actions/.github/actions/docker-build-github@master
+        with:
+          image_name: ${{ vars.DOCKER_REPO }}/${{ vars.DOCKER_IMAGE }}
+          dockerfile: Dockerfile
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+
   terraform-deploy:
+    needs: docker-build
     runs-on: ubuntu-latest
     environment: production
     permissions:
